--- a/quienvaganando/templates/quienvaganando/base.html
+++ b/quienvaganando/templates/quienvaganando/base.html
@@ -12,7 +12,7 @@
         <div class="header">
             <h1>¿QUIÉN VA GANANDO?</h1>
             <!-- cosas del login -->
-        </div class="header">
+        </div>
 
         {% block content %}
         {% endblock content %}
