avance en tabla

--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -6,4 +6,40 @@
 
 <h2>EL NOMBRE DEL TORNEO ES {{nombre}}!!</h2>
 
+
+
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Posición</th>
+        <th scope="col">Equipo</th>
+        <th scope="col">Puntaje</th>
+        <th scope="col">H...</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>{{posiciones.0}}</td>
+        <td>{{puntajes.0}}
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>{{posiciones.1}}</td>
+        <td>{{puntajes.1}}</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td >{{posiciones.2}}</td>
+        <td>{{puntajes.2}}</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+
+
+
+
 {% endblock content %}
