--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -11,34 +11,21 @@
 <table class="table">
     <thead>
       <tr>
-        <th scope="col">Posición</th>
-        <th scope="col">Equipo</th>
-        <th scope="col">Puntaje</th>
-        <th scope="col">H...</th>
+        {% for head in header_tabla %}
+        <th scope="col">{{head}}</th>
+        {% endfor %}
       </tr>
     </thead>
     <tbody>
+      {% for row in datos_tabla %}
       <tr>
-        <th scope="row">1</th>
-        <td>{{posiciones.0}}</td>
-        <td>{{puntajes.0}}
-        <td>@mdo</td>
+        {% for elem in row %}
+        <td>{{elem}}</td>
+        {% endfor %}
       </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>{{posiciones.1}}</td>
-        <td>{{puntajes.1}}</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td >{{posiciones.2}}</td>
-        <td>{{puntajes.2}}</td>
-        <td>@twitter</td>
-      </tr>
+      {% endfor %}
     </tbody>
   </table>
-
 
 
 
