FEAT Agregar lista de eventos al template

--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -27,6 +27,11 @@
     </tbody>
   </table>
 
+  EVENTOS:
+  {% for evento in eventos %}
+  {{evento}}
+  {% endfor %}
+
 
 
 {% endblock content %}
