--- a/quienvaganando/templates/quienvaganando/login.html
+++ b/quienvaganando/templates/quienvaganando/login.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-    <div class="container">
-        <div class="content">
-            <h1> Iniciar Sesión </h1>
-            <form method="post" >
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="nombre_usuario">Nombre</label>
-                    <input type="text" class="form-control" id=nombre_usuario name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="contraseña">Contraseña</label>
-                    <input type="password" class="form-control" id="contraseña" name="contraseña" required>
-                </div>
-                <button type="submit">Entrar</button>
-            </form>
-        </div>
+{% extends 'quienvaganando/base.html' %}
+
+{% block subtitle %}{{nombre}}{% endblock  %}
+
+{% block content %}
+<h1> Iniciar Sesión </h1>
+<form method="post" >
+    {% csrf_token %}
+    <div class="card-body">
+        {{ form_login.as_p }}
+        <button class="btn btn-primary" name="Register" type="submit">Iniciar Sesión</button>
     </div>
-</body>
-</html>
+</form>
+
+{% endblock content %}
