--- a/quienvaganando/templates/quienvaganando/register_user.html
+++ b/quienvaganando/templates/quienvaganando/register_user.html
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <title>Registro</title>
-</head>
-<body>
-   <h1> Registro </h1>
-   <form method="post">
-       {% csrf_token %}
-       <div class="form-group">
-           <label for="nombre_usuario">Nombre</label>
-           <input type="text" class="form-control" id=nombre_usuario name="nombre" required>
-       </div>
+{% extends 'quienvaganando/base.html' %}
 
-       <div class="form-group">
-           <label for="contraseña">Contraseña</label>
-           <input type="password" class="form-control" id="contraseña" name="contraseña" required>
-       </div>
+{% block subtitle %}{{nombre}}{% endblock subtitle %}
 
-        <button type="submit">Crear usuario</button>
-   </form>
-</body>
-</html>
+{% block content %}
+
+<h1> Registro </h1>
+<form action="" method="post">
+    {% csrf_token %}
+    <div class="card-body">
+    {{ form_register.as_p }}
+    <button class="btn btn-primary" name="Register" type="submit">Registrarme</button>
+    </div>
+</form>
+
+{% endblock content %}
