--- a/quienvaganando/templates/quienvaganando/base.html
+++ b/quienvaganando/templates/quienvaganando/base.html
@@ -13,6 +13,7 @@
             <h1>¿QUIÉN VA GANANDO?</h1>
             <!-- cosas del login -->
             <hr>
+            <a href="{% url 'home' %}">Home</a>
             {% if user.is_authenticated %}
             <a href="{% url 'logout' %}">Cerrar sesión</a>
             {% else %}
