--- a/quienvaganando/templates/quienvaganando/base.html
+++ b/quienvaganando/templates/quienvaganando/base.html
@@ -3,8 +3,7 @@
     <head>
         <title>{% block subtitle %}{% endblock subtitle %} :: ¿Quién va ganando?
         </title>
-
-        <!-- agregar estilos (css) -->
+        <link rel="stylesheet" href="/static/style/bootstrap.min.css">
     </head>
 
     <body>
@@ -14,10 +13,15 @@
             <!-- cosas del login -->
             <hr>
             {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}">Cerrar sesión</a>
+            <!-- <a href="{% url 'logout' %}">Cerrar sesión</a> -->
+            <button class="btn btn-primary" onclick="window.location.href='{% url 'logout' %}'">Cerrar Sesión</button>
+
             {% else %}
-            <a href="{% url 'register_user' %}">Registrarse</a>
-            <a href="{% url 'login' %}">Iniciar Sesión</a>
+            <!-- <a href="{% url 'register_user' %}">Registrarse</a> -->
+            <button class="btn btn-primary" onclick="window.location.href='{% url 'register_user' %}'">Registrarse</button>
+            <!-- <a href="{% url 'login' %}">Iniciar Sesión</a> -->
+            <button class="btn btn-primary" onclick="window.location.href='{% url 'login' %}'">Iniciar Sesión</button>
+
             {% endif %}
             <hr>
         </div>
