--- a/quienvaganando/templates/quienvaganando/base.html
+++ b/quienvaganando/templates/quienvaganando/base.html
@@ -12,7 +12,7 @@
             <h1>¿QUIÉN VA GANANDO?</h1>
             <!-- cosas del login -->
             <hr>
-            <a href="{% url 'home' %}">Home</a>
+            <button class="btn btn-primary" onclick="window.location.href='{% url 'home' %}'">Home</button>
             {% if user.is_authenticated %}
             <!-- <a href="{% url 'logout' %}">Cerrar sesión</a> -->
             <button class="btn btn-primary" onclick="window.location.href='{% url 'logout' %}'">Cerrar Sesión</button>
