--- a/quienvaganando/templates/quienvaganando/login.html
+++ b/quienvaganando/templates/quienvaganando/login.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     <div class="card-body">
         {{ form_login.as_p }}
-        <button class="btn btn-primary" name="Register" type="submit">Iniciar Sesión</button>
+        <button class="btn btn-info" name="Register" type="submit">Iniciar Sesión</button>
     </div>
 </form>
 
