--- a/quienvaganando/templates/quienvaganando/register_user.html
+++ b/quienvaganando/templates/quienvaganando/register_user.html
@@ -9,7 +9,7 @@
     {% csrf_token %}
     <div class="card-body">
     {{ form_register.as_p }}
-    <button class="btn btn-primary" name="Register" type="submit">Registrarme</button>
+    <button class="btn btn-info" name="Register" type="submit">Registrarme</button>
     </div>
 </form>
 
