home redirect torneos

--- a/quienvaganando/templates/quienvaganando/lista_torneos.html
+++ b/quienvaganando/templates/quienvaganando/lista_torneos.html
@@ -15,4 +15,6 @@
     {% endfor %}
 </ul>
 
+<button class="btn btn-info" onclick="window.location.href='{% url 'creacion_torneo' %}'">Agregar un nuevo torneo</button>
+
 {% endblock content %}
