--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2 style="font-family: 'DM Sans', sans-serif;" > {{nombre}}!!</h2>
+<h2 style="font-family: 'DM Sans', sans-serif;" > {{nombre}}</h2>
 
 <body>
 
