--- a/quienvaganando/templates/quienvaganando/base.html
+++ b/quienvaganando/templates/quienvaganando/base.html
@@ -5,13 +5,19 @@
         </title>
         <link rel="stylesheet" href="/static/style/bootstrap.min.css">
     </head>
+    <style>
+        .btn {margin: 0 10px;}
+    </style>
 
     <body>
 
         <div class="header">
+            <!-- <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark"> -->
             <h1>¿QUIÉN VA GANANDO?</h1>
-            <!-- cosas del login -->
+            <!-- </nav> -->
             <hr>
+            <!-- cosas del login -->
+            <div style="display: flex; justify-content: center;">
             <!-- <a href="{% url 'home' %}">Home</a> -->
             <button class="btn btn-primary" onclick="window.location.href='{% url 'home' %}'">Home</button>
 
@@ -27,6 +33,7 @@
             <button class="btn btn-primary" onclick="window.location.href='{% url 'login' %}'">Iniciar Sesión</button>
 
             {% endif %}
+            </div>
             <hr>
         </div>
         
