--- a/quienvaganando/templates/quienvaganando/lista_torneos.html
+++ b/quienvaganando/templates/quienvaganando/lista_torneos.html
@@ -4,8 +4,9 @@
 
 {% block content %}
 
-<h1> Lista de Torneos </h1>
+<h1 style="text-align: center;"> Lista de Torneos </h1>
 
+<div style="display:flex; justify-content: center;">
 <ul class="list-group">
     {% for torneo in mis_torneos %}
     <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -15,6 +16,8 @@
     {% endfor %}
 </ul>
 
+</div>
+<div style="display:flex; justify-content: center; margin-top: 20px;">
 <button class="btn btn-info" onclick="window.location.href='{% url 'creacion_torneo' %}'">Agregar un nuevo torneo</button>
-
+</div>
 {% endblock content %}
