--- a/quienvaganando/templates/quienvaganando/register_user.html
+++ b/quienvaganando/templates/quienvaganando/register_user.html
@@ -2,15 +2,17 @@
 
 {% block subtitle %}{{nombre}}{% endblock subtitle %}
 
+{% load crispy_forms_tags %}
 {% block content %}
 
-<h1> Registro </h1>
+<h1 style="text-align: center;"> Registro </h1>
+<div class="contenedor" style="display:flex; justify-content: center;">
 <form action="" method="post">
     {% csrf_token %}
     <div class="card-body">
-    {{ form_register.as_p }}
+    {{ form_register|crispy }}
     <button class="btn btn-info" name="Register" type="submit">Registrarme</button>
     </div>
 </form>
-
+</div>
 {% endblock content %}
