Creación página para editar torneo
- Variable es_dueno en view de overview_torneo identifica si el usuario es el dueño del torneo que está mirando.

- Se añade condición para verificar que el usuario es dueño del torneo que está mirando en overview_torneo.html. En caso que esto ocurra, se mostrará botón para editar el torneo.

- Se agrega url para editar_torneo.html

--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -46,6 +46,13 @@
         </ul>
       </div>
     </div>
+    {% if es_dueño %}
+    </div class ="row mt-3">
+      </div class="col text-center">
+        <a href="{%url 'editar_torneo' torneo_id=torneo.id %}" class="btn btn-primary">Editar Torneo</a>
+      <div> 
+    </div>
+    {% endif %}
   </div>
 </body>
 
