--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -4,9 +4,17 @@
 
 {% block content %}
 
-<h2 style="font-family: 'DM Sans', sans-serif;" > {{  nombre}}</h2>
+<h2 style="font-family: 'DM Sans', sans-serif;" > {{ torneo.nombre }}</h2>
 
 <body>
+
+  {% if es_dueno %}
+  <div class="mt-3 mb-auto">
+     
+    <a href="{%url 'agregar_participante' uuid_torneo=torneo.uuid %}" class="btn btn-primary">Agregar Participante</a>
+
+  </div>
+  {% endif %}
 
   <div class="row justify-content-md-center mt-3 mb-auto"> 
      
