--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -1,6 +1,6 @@
 {% extends 'quienvaganando/base.html' %}
 
-{% block subtitle %}{{nombre}}{% endblock subtitle %}
+{% block subtitle %}{{ torneo.nombre }}{% endblock subtitle %}
 
 {% block content %}
 
