--- a/quienvaganando/templates/quienvaganando/base.html
+++ b/quienvaganando/templates/quienvaganando/base.html
@@ -4,6 +4,7 @@
         <title>{% block subtitle %}{% endblock subtitle %} :: ¿Quién va ganando?
         </title>
         <link rel="stylesheet" href="/static/style/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/style/custom.css">
     </head>
     <style>
         .btn {margin: 0 10px;}
