--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -4,6 +4,94 @@
 
 {% block content %}
 
-<!-- ... -->
+<body>
+  
+  <h2 style="font-family: 'DM Sans', sans-serif;" > {{ nombre_torneo }}: {{ nombre_evento }}</h2>
+  <h6>{{ descripcion }}</h6>
+
+  <!-- TABLA PUNTAJES -->
+    <div class="row justify-content-md-center mt-3 mb-auto"> 
+        <h4 class="text-danger fs-3 ms-4 "  style="font-family: 'DM Sans', sans-serif;" > Tabla de puntajes</h4>
+      </div>
+      <div class="col-7" style="font-family: 'DM Sans', sans-serif;">
+        
+        <table class="table">
+          <thead>
+            <tr class="table-danger">
+              <th scope="col" >Posición</th>
+              <th scope="col" >Equipo</th>
+              <th scope="col" >Puntaje</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for posicion in posiciones %}
+            <tr>
+              <td class="fs-5" >{{ posicion.posicion }}</td>
+              <td class="fs-5" >{{ posicion.nombre }}</td>
+              <td class="fs-5" >{{ posicion.puntaje }}</td>
+            </tr> 
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+
+
+<!-- Partidos Pasados -->
+<!-- como una tabla mientras, después podríamos hacer algo más lindo -->
+<div class="col-7" style="font-family: 'DM Sans', sans-serif;">
+        
+  <table class="table">
+    <thead>
+      <tr class="table-danger">
+        <th scope="col" >Fecha</th>
+        <th scope="col" >Categoría</th>
+        <th scope="col" ></th>
+        <th scope="col" >Resultado</th>
+        <th scope="col" ></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for partido in partidos_pasados %}
+      <tr>
+        <td class="fs-5" >{{ partido.fecha }}</td>
+        <td class="fs-5" >{{ partido.categoria }}</td>
+        <td class="fs-5" >{{ partido.nombre_equipo_a }}</td>
+        <td class="fs-5" >{{ partido.resultado_a }} - {{partido.resultado_b}}</td>
+        <td class="fs-5" >{{ partido.nombre_equipo_b }}</td>
+
+      </tr> 
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
+<!-- Partidos Próximos -->
+<div class="col-7" style="font-family: 'DM Sans', sans-serif;">
+        
+  <table class="table">
+    <thead>
+      <tr class="table-danger">
+        <th scope="col" >Fecha</th>
+        <th scope="col" >Hora</th>
+        <th scope="col" >Lugar</th>
+        <th scope="col" >Categoría</th>
+        <th scope="col" >Partido</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for partido in partidos_proximos %}
+      <tr>
+        <td class="fs-5" >{{ partido.fecha }}</td>
+        <td class="fs-5" >{{ partido.hora }}</td>
+        <td class="fs-5" >{{ partido.lugar }}</td>
+        <td class="fs-5" >{{ partido.categoria }}</td>
+        <td class="fs-5" >{{ partido.nombre_equipo_a }} vs. {{partido.nombre_equipo_b}}</td>
+      </tr> 
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
+</body>
 
 {% endblock content %}
