--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -3,18 +3,31 @@
 {% block subtitle %}{{nombre}}{% endblock subtitle %}
 
 {% block content %}
+<head>
+  <style>
+    .container{
+      display: flex;
+      gap: 20px
+    }
+    .table-container{
+      width: 100%;
+      overflow-x: auto;
+      overflow-y: auto;
+      max-height: 500px;
+    }
 
+  </style>
+
+</head>
 <body>
+  <h2 style="font-family: 'DM Sans', sans-serif; text-align: center;" > {{ nombre_torneo }}: {{ nombre_evento }}</h2>
+  <h6 style="text-align: center;">{{ descripcion }}</h6>
+  <div style="float:left">
   
-  <h2 style="font-family: 'DM Sans', sans-serif;" > {{ nombre_torneo }}: {{ nombre_evento }}</h2>
-  <h6>{{ descripcion }}</h6>
-
   <!-- TABLA PUNTAJES -->
-    <div class="row justify-content-md-center mt-3 mb-auto"> 
+    <div class="container">
+      <div class="col-7" style="font-family: 'DM Sans', sans-serif;" style="display: flex">
         <h4 class="text-danger fs-3 ms-4 "  style="font-family: 'DM Sans', sans-serif;" > Tabla de puntajes</h4>
-      </div>
-      <div class="col-7" style="font-family: 'DM Sans', sans-serif;">
-        
         <table class="table">
           <thead>
             <tr class="table-danger">
@@ -34,12 +47,14 @@
           </tbody>
         </table>
       </div>
-
+    </div>
 
 <!-- Partidos Pasados -->
 <!-- como una tabla mientras, después podríamos hacer algo más lindo -->
+<div class="container">
 <div class="col-7" style="font-family: 'DM Sans', sans-serif;">
-        
+  <h4 class="text-danger fs-3 ms-4 scroll"  style="font-family: 'DM Sans', sans-serif;" > Partidos Pasados</h4>
+  <div class="table-container">
   <table class="table">
     <thead>
       <tr class="table-danger">
@@ -53,7 +68,7 @@
     <tbody>
       {% for partido in partidos_pasados %}
       <tr>
-        <td class="fs-5" >{{ partido.fecha }}</td>
+        <td class="fs-5" >{{ partido.fecha|date:"d/m/y" }}</td>
         <td class="fs-5" >{{ partido.categoria }}</td>
         <td class="fs-5" >{{ partido.nombre_equipo_a }}</td>
         <td class="fs-5" >{{ partido.resultado_a }} - {{partido.resultado_b}}</td>
@@ -64,10 +79,13 @@
     </tbody>
   </table>
 </div>
+</div>
 
 <!-- Partidos Próximos -->
+
 <div class="col-7" style="font-family: 'DM Sans', sans-serif;">
-        
+  <h4 class="text-danger fs-3 ms-4 scroll"  style="font-family: 'DM Sans', sans-serif;" > Partidos Próximos</h4>
+  <div class="table-container">      
   <table class="table">
     <thead>
       <tr class="table-danger">
@@ -81,7 +99,7 @@
     <tbody>
       {% for partido in partidos_proximos %}
       <tr>
-        <td class="fs-5" >{{ partido.fecha }}</td>
+        <td class="fs-5" >{{ partido.fecha|date:"d/m/y" }}</td>
         <td class="fs-5" >{{ partido.hora }}</td>
         <td class="fs-5" >{{ partido.lugar }}</td>
         <td class="fs-5" >{{ partido.categoria }}</td>
@@ -90,6 +108,9 @@
       {% endfor %}
     </tbody>
   </table>
+</div>
+</div>
+</div>
 </div>
 
 </body>
