Agregar estilo solo a template relevante

--- a/quienvaganando/templates/quienvaganando/editar_participantes.html
+++ b/quienvaganando/templates/quienvaganando/editar_participantes.html
@@ -5,6 +5,17 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+<head>
+    <style>
+    .alert {
+        background-color: #f3a198;
+        color: black;
+        padding: 10px;
+    }
+    </style>
+  
+  </head>
+
 <h2 style="font-family: 'DM Sans', sans-serif;" > {{ torneo.nombre }}</h2>
 <h4 style="text-align: center;">Editar Participantes</h4>
 
