--- a/quienvaganando/templates/quienvaganando/editar_torneo.html
+++ b/quienvaganando/templates/quienvaganando/editar_torneo.html
@@ -11,7 +11,10 @@
     {% csrf_token %}
     {{ form|crispy }}
     <button class="btn btn-info" name="Register" type="submit">Guardar Cambios</button>
-
+</form>
+<form method="post" action="{% url 'eliminar_torneo' uuid_torneo %}">
+    {% csrf_token %}
+    <button class="btn btn-danger" name="Delete" type="submit">Eliminar Torneo</button>
 </form>
 </div>
 {% endblock content %}
