--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -8,6 +8,14 @@
 
 <body>
 
+  {% if es_dueno %}
+  <div class="mt-3 mb-auto">
+
+    <a href="{%url 'agregar_evento' uuid_torneo=torneo.uuid %}" class="btn btn-primary">Agregar Evento</a>
+
+  </div>
+  {% endif %}
+
   <div class="row justify-content-md-center mt-3 mb-auto"> 
      
     <h4 class="text-danger fs-3 ms-4 "  style="font-family: 'DM Sans', sans-serif;" > Tabla de puntajes</h4>
