--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2 style="font-family: 'DM Sans', sans-serif;" > {{  nombre}}</h2>
+<h2 style="font-family: 'DM Sans', sans-serif;" > {{ torneo.nombre }}</h2>
 
 <body>
 
@@ -46,13 +46,15 @@
         </ul>
       </div>
     </div>
-    {% if es_dueño %}
-    </div class ="row mt-3">
-      </div class="col text-center">
-        <a href="{%url 'editar_torneo' torneo_id=torneo.id %}" class="btn btn-primary">Editar Torneo</a>
-      <div> 
-    </div>
-    {% endif %}
+
+  {% if es_dueno %}
+  <div class="mt-3 mb-auto">
+
+    <a href="{%url 'editar_torneo' uuid_torneo=torneo.uuid %}" class="btn btn-primary">Editar Torneo</a>
+
+  </div>
+  {% endif %}
+
   </div>
 </body>
 
