--- a/quienvaganando/templates/quienvaganando/base.html
+++ b/quienvaganando/templates/quienvaganando/base.html
@@ -4,6 +4,10 @@
         <title>{% block subtitle %}{% endblock subtitle %} :: ¿Quién va ganando?
         </title>
         <link rel="stylesheet" href="/static/style/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
     </head>
     <style>
         .btn {margin: 0 10px;}
@@ -36,6 +40,30 @@
             </div>
             <hr>
         </div>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                toastr.options = {
+                    "closeButton": true,
+                    "newestOnTop": true,
+                    "positionClass": "toast-top-right",
+                    "onclick": null,
+                    "showDuration": "300",
+                    "hideDuration": "1000",
+                    "timeOut": "5000",
+                    "extendedTimeOut": "1000",
+                    "showEasing": "swing",
+                    "hideEasing": "linear",
+                    "showMethod": "fadeIn",
+                    "hideMethod": "fadeOut"
+                };
+    
+                {% if messages %}
+                    {% for message in messages %}
+                        toastr["{{ message.tags|escapejs }}"]("{{ message|escapejs }}");
+                    {% endfor %}
+                {% endif %}
+            });
+        </script>
         
         {% block content %}
         {% endblock content %}
