--- a/quienvaganando/templates/quienvaganando/lista_torneos.html
+++ b/quienvaganando/templates/quienvaganando/lista_torneos.html
@@ -6,7 +6,7 @@
 
 <h1 style="text-align: center;"> Lista de Torneos </h1>
 
-<div style="display:flex; justify-content: center;">
+<div style="display:flex; justify-content: center; margin-top: 20px;">
 <ul class="list-group">
     {% for torneo in mis_torneos %}
     <li class="list-group-item d-flex justify-content-between align-items-center">
