--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -5,7 +5,6 @@
 {% block content %}
 
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     .container{
       display: flex;
@@ -26,7 +25,7 @@
 </head>
 
 <body>
-  <a href="{% url 'overview_torneo' uuid_torneo=uuid_torneo %}" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Volver a Torneo</a>
+  <a href="{% url 'overview_torneo' uuid_torneo=uuid_torneo %}" class="btn btn-outline-dark"><i class="fas fa-arrow-left"></i> Volver a Torneo</a>
   <h2 style="font-family: 'DM Sans', sans-serif; text-align: center;" > {{ nombre_torneo }}: {{ nombre_evento }}</h2>
   <h5 style="text-align: center;">{{ descripcion }}</h5>
   {% if is_owner %}
@@ -37,11 +36,11 @@
     <!-- TABLA PUNTAJES -->
     <div class="container">
       <div class="col-7" style="font-family: 'DM Sans', sans-serif;" style="display: flex">
-        <h4 class="text-danger fs-3 ms-4 "  style="font-family: 'DM Sans', sans-serif;" > Tabla de puntajes</h4>
+        <h4 class="text-primary-emphasis fs-3 ms-4 "  style="font-family: 'DM Sans', sans-serif;" > Tabla de puntajes</h4>
         <div class="table-container">
           <table class="table">
             <thead>
-              <tr class="table-danger">
+              <tr class="table-primary">
                 <th scope="col" >Posición</th>
                 <th scope="col" >Equipo</th>
                 <th scope="col" >Puntaje</th>
@@ -66,11 +65,11 @@
     <div class="container">
       
       <div class="col-7" style="font-family: 'DM Sans', sans-serif;">
-        <h4 class="text-danger fs-3 ms-4 scroll"  style="font-family: 'DM Sans', sans-serif;" > Partidos Pasados</h4>
+        <h4 class="text-primary-emphasis fs-3 ms-4 scroll"  style="font-family: 'DM Sans', sans-serif;" > Partidos Pasados</h4>
         <div class="table-container">
           <table class="table">
             <thead>
-              <tr class="table-danger">
+              <tr class="table-primary">
                 <th scope="col" >Fecha</th>
                 <th scope="col" >Categoría</th>
                 <th scope="col" ></th>
@@ -96,11 +95,11 @@
       <!-- Partidos Próximos -->
 
       <div class="col-7" style="font-family: 'DM Sans', sans-serif;">
-        <h4 class="text-danger fs-3 ms-4 scroll"  style="font-family: 'DM Sans', sans-serif;" > Partidos Próximos</h4>
+        <h4 class="text-primary-emphasis fs-3 ms-4 scroll"  style="font-family: 'DM Sans', sans-serif;" > Partidos Próximos</h4>
         <div class="table-container">      
           <table class="table">
             <thead>
-              <tr class="table-danger">
+              <tr class="table-primary">
                 <th scope="col" >Fecha</th>
                 <th scope="col" >Hora</th>
                 <th scope="col" >Lugar</th>
