Confimarción Eliminar Torneo
Se agrega página para confirmar la eliminación de un torneo:
- Se redirige a la página desde editar_torneo
- Se agrega eliminar_torneo.html
- Se agrega url en urls.py
- Se modifica la view de eliminar_torneo

--- a/quienvaganando/templates/quienvaganando/editar_torneo.html
+++ b/quienvaganando/templates/quienvaganando/editar_torneo.html
@@ -13,10 +13,5 @@
         <button class="btn btn-info" name="Register" type="submit">Guardar Cambios</button>
     </form>
 </div>
-<div>
-    <form method="post" action="{% url 'eliminar_torneo' uuid_torneo %}">
-        {% csrf_token %}
-        <button class="btn btn-danger" name="Delete" type="submit">Eliminar Torneo</button>
-    </form>
-</div>
+<a href="{% url 'eliminar_torneo' uuid_torneo %}" class="btn btn-danger eliminar-torneo">Eliminar</a>
 {% endblock content %}
