--- a/quienvaganando/templates/quienvaganando/agregar_partido.html
+++ b/quienvaganando/templates/quienvaganando/agregar_partido.html
@@ -4,6 +4,7 @@
 
 {% load crispy_forms_tags %}
 {% block content %}
+<a href="{% url 'overview_evento' uuid_torneo nombre_evento %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Lista de Torneos</a>
 <h2 style="text-align: center;">Agregar Partido</h2>
 <div style="display: flex; justify-content: center;">
     <form method="post">
