--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -22,32 +22,39 @@
       right: 20px;
    }
    .button-container {
-    top: 150px;
+    top: 100px;
     position: absolute;
     right: 20px;
-    justify-content: flex-end;
+    justify-content: flex-end;  
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 10px;
     }
+    .volver {
+      position:absolute;
+      top: 100px;
+      left: 00px;
+    }
+    .oscuro{
+      background-color: rgb(94, 18, 18);
+    }
   </style>
 </head>
 
 <body>
-  <a href="{% url 'overview_torneo' uuid_torneo=uuid_torneo %}" class="btn btn-outline-dark"><i class="fas fa-arrow-left"></i> Volver a Torneo</a>
-  <a href="{% url 'overview_torneo' uuid_torneo=uuid_torneo %}" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Volver a Torneo</a>
+  <a href="{% url 'overview_torneo' uuid_torneo=uuid_torneo %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Volver a Torneo</a>
+  {% if is_owner %}
   <div class="button-container">
-    <button class="btn btn-secondary" onclick="window.location.href='{% url 'eliminar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Eliminar Evento <i class="fas fa-trash-alt"></i></button>
-    <button class="btn btn-secondary" onclick="window.location.href='{% url 'editar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Editar Evento <i class="fas fa-edit"></i></button>
-    <button class="btn btn-secondary" onclick="window.location.href='{% url 'agregar_partido' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Agregar Partido <i class="fas fa-plus"></i></button>
+    <button class="btn btn-info" onclick="window.location.href='{% url 'eliminar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Eliminar Evento <i class="fas fa-trash-alt"></i></button>
+    <button class="btn btn-info" onclick="window.location.href='{% url 'editar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Editar Evento <i class="fas fa-edit"></i></button>
+    <button class="btn btn-info" onclick="window.location.href='{% url 'agregar_partido' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Agregar Partido <i class="fas fa-plus"></i></button>
   </div>
+  {% endif %}
 
   <h2 style="font-family: 'DM Sans', sans-serif; text-align: center;" > {{ nombre_torneo }}: {{ nombre_evento }}</h2>
   <h5 style="text-align: center;">{{ descripcion }}</h5>
-  {% if is_owner %}
 
-  {% endif %}
   <div style="float:left">
 
       
@@ -95,7 +102,11 @@
                 <th scope="col" >Categoría</th>
                 <th scope="col" ></th>
                 <th scope="col" >Resultado</th>
-                <th scope="col" ></th>                
+                <th scope="col" ></th>    
+                {% if is_owner %}
+                <th scope="col" ></th>
+                <th scope="col" ></th>
+                {% endif %}            
               </tr>
             </thead>
             <tbody>
@@ -106,6 +117,24 @@
                   <td class="fs-5" >{{ partido.nombre_equipo_a }}</td>
                   <td class="fs-5" >{{ partido.resultado_a }} - {{partido.resultado_b}}</td>
                   <td class="fs-5" >{{ partido.nombre_equipo_b }}</td>
+                  {% if is_owner %}
+                  <td class="fs-5" >
+                    <form action="{% url 'eliminar_partido' uuid_torneo nombre_evento partido.id %}" method="post">
+                      {% csrf_token %}
+                      <button type="submit" class="btn btn-info btn-sm">
+                          <i class="fas fa-trash-alt"></i>
+                      </button>
+                    </form>
+                  </td>
+                  <td class="fs-5" >
+                    <form action="{% url 'editar_partido' uuid_torneo nombre_evento partido.id %}" method="post">
+                      {% csrf_token %}
+                      <button type="submit" class="btn btn-info btn-sm">
+                          <i class="fas fa-edit"></i>
+                      </button>
+                    </form>
+                  </td>
+                  {% endif %}
                 </tr> 
                 {% endfor %}
               </tbody>
@@ -128,6 +157,7 @@
                 <th scope="col" >Partido</th>
                 {% if is_owner %}
                 <th scope="col" ></th>
+                <th scope="col" ></th>
                 {% endif %}
               </tr>
             </thead>
@@ -143,8 +173,16 @@
                 <td class="fs-5" >
                   <form action="{% url 'eliminar_partido' uuid_torneo nombre_evento partido.id %}" method="post">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm">
+                    <button type="submit" class="btn btn-info btn-sm">
                         <i class="fas fa-trash-alt"></i>
+                    </button>
+                  </form>
+                </td>
+                <td class="fs-5" >
+                  <form action="{% url 'editar_partido' uuid_torneo nombre_evento partido.id %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-info btn-sm">
+                        <i class="fas fa-edit"></i>
                     </button>
                   </form>
                 </td>
