--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -4,9 +4,12 @@
 
 {% block content %}
 
-<h2 style="font-family: 'DM Sans', sans-serif;" > {{  nombre}}</h2>
 
 <body>
+  
+  <a href="{% url 'torneos' %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Lista de Torneos</a>
+  <h2 style="font-family: 'DM Sans', sans-serif; text-align: center;" > {{  nombre}}</h2>
+
 
   <div class="row justify-content-md-center mt-3 mb-auto"> 
      
@@ -43,7 +46,7 @@
           {% for evento in eventos %}
           <li class="list-group-item d-flex justify-content-between align-items-center;">
             {{ evento }}
-            <button type="button" onclick="window.location.href='{% url 'overview_evento' uuid_torneo evento %}'" class="btn btn-primary btn-sm">
+            <button type="button" onclick="window.location.href='{% url 'overview_evento' uuid_torneo evento %}'" class="btn btn-info btn-sm">
               <i class="fas fa-eye fa-xs"></i>
             </button>
         </li>
