--- a/quienvaganando/templates/quienvaganando/editar_evento.html
+++ b/quienvaganando/templates/quienvaganando/editar_evento.html
@@ -4,7 +4,7 @@
 
 {% load crispy_forms_tags %}
 {% block content %}
-<a href="{% url 'overview_evento' uuid_torneo nombre_evento %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Lista de Torneos</a>
+<a href="{% url 'overview_evento' uuid_torneo nombre_evento %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Volver al Torneo</a>
 <h2 style="text-align: center;">Editar Evento</h2>
 <div style="display: flex; justify-content: center;">
     <form method="post">
