--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -22,8 +22,8 @@
       right: 20px;
    }
    .button-container {
-    top: 100px;
-    position: absolute;
+    top: -35px;
+    position: relative;
     right: 20px;
     justify-content: flex-end;  
     display: flex;
@@ -32,8 +32,8 @@
     gap: 10px;
     }
     .volver {
-      position:absolute;
-      top: 100px;
+      position:relative;
+      
       left: 00px;
     }
     .oscuro{
@@ -52,8 +52,11 @@
   </div>
   {% endif %}
 
-  <h2 style="font-family: 'DM Sans', sans-serif; text-align: center;" > {{ nombre_torneo }}: {{ nombre_evento }}</h2>
+  <h2 style="font-family: 'DM Sans', sans-serif; text-align: center;">
+    {{ nombre_torneo }}: {{ nombre_evento }}
+  </h2>
   <h5 style="text-align: center;">{{ descripcion }}</h5>
+
 
   <div style="float:left">
 
