--- a/quienvaganando/templates/quienvaganando/agregar_evento.html
+++ b/quienvaganando/templates/quienvaganando/agregar_evento.html
@@ -4,14 +4,13 @@
 
 {% load crispy_forms_tags %}
 {% block content %}
-
+<a href="{% url 'overview_torneo' uuid_torneo %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Volver al Torneo</a>
 <h1 style="text-align: center;">Agregar Evento</h1>
 <div style="display: flex; justify-content: center;">
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button class="btn btn-info" name="Guardar" type="submit">Guardar Cambios</button>
-
 </form>
 </div>
 {% endblock content %}
