--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -32,9 +32,9 @@
     gap: 10px;
     }
     .volver {
-      position:relative;
-      
-      right: 720px;
+      margin-right: auto;
+      margin-left: 30px;
+    
     }
     .oscuro{
       background-color: rgb(94, 18, 18);
