--- a/quienvaganando/templates/quienvaganando/lista_torneos.html
+++ b/quienvaganando/templates/quienvaganando/lista_torneos.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1 style="text-align: center;"> Lista de Torneos </h1>
+<h1 style="text-align: center;"> Mis Torneos </h1>
 
 <div style="display:flex; justify-content: center; margin-top: 20px;">
 <ul class="list-group">
