--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -6,68 +6,52 @@
 
 <head>
   <style>
-    .container{
-      display: flex;
-      gap: 50px
-    }
-    .table-container{
-      width: 100%;
-      overflow-x: auto;
-      overflow-y: auto;
-      max-height: 300px;
-    }
-    .eliminar-evento {
-      position: absolute;
-      top: 150px;
-      right: 20px;
-   }
-   .button-container {
-    top: -10px;
-    position: relative;
-    right: 20px;
-    justify-content: flex-end;  
+  .container{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    }
-    .volver {
-      margin-right: auto;
-      margin-left: 30px;
-    
-    }
-    .oscuro{
-      background-color: rgb(94, 18, 18);
-    }
+    gap: 50px
+  }
+  .table-container{
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: auto;
+    max-height: 300px;
+  }
+ .button-container {
+  position: relative;
+  right: 20px;
+  justify-content: flex-end;  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  }
+  .volver {
+    position:absolute;
+    left: 20px;
+  }
+
   </style>
 </head>
 
 
 
 <body>
-   
-  
   <div class="button-container">
-    <a href="{% url 'overview_torneo' uuid_torneo=uuid_torneo %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Volver a Torneo</a>
-    {% if is_owner %}
+    <button class="btn btn-outline-dark volver" onclick="window.location.href='{% url 'overview_torneo' uuid_torneo=uuid_torneo %}'"><i class="fas fa-arrow-left"></i>Volver a Torneo</button>
+  {% if is_owner %}
     <button class="btn btn-info" onclick="window.location.href='{% url 'eliminar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Eliminar Evento <i class="fas fa-trash-alt"></i></button>
     <button class="btn btn-info" onclick="window.location.href='{% url 'editar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Editar Evento <i class="fas fa-edit"></i></button>
     <button class="btn btn-info" onclick="window.location.href='{% url 'agregar_partido' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Agregar Partido <i class="fas fa-plus"></i></button>
   </div>
   {% endif %}
 
-  <h2 style="font-family: 'DM Sans', sans-serif; text-align: center;">
+  <h2 style="font-family: 'DM Sans', sans-serif; text-align: center; margin-top: 10px;">
     {{ nombre_torneo }}: {{ nombre_evento }}
   </h2>
   <h5 style="text-align: center;">{{ descripcion }}</h5>
 
 
   <div style="float:left">
-
-      
-      <!-- <a href="{% url 'eliminar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}" class="btn btn-danger eliminar-evento">Eliminar Evento <i class="fas fa-trash-alt"></i></a>
-      <a href="{% url 'editar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}" class="btn btn-danger eliminar-evento">Editar Evento <i class="fas fa-edit"></i></a>
-      <a href="{% url 'agregar_partido' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}" class="btn btn-danger eliminar-evento">Agregar Partido <i class="fas fa-plus"></i></a> -->
     <!-- TABLA PUNTAJES -->
     <div class="container">
       <div class="col-7" style="font-family: 'DM Sans', sans-serif;" style="display: flex">
